fixed horizontal scrolling issue

--- a/web/src/assets/css/main.css
+++ b/web/src/assets/css/main.css
@@ -495,7 +495,8 @@ section {
     background-clip: padding-box;
     border: 1px solid rgba(0, 0, 0, .15);
     border-radius: .25rem;
-    overflow-y: scroll;
+    overflow-y: auto;
+    overflow-x: hidden;
     height: 80vh;
 }
 
